--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,14 @@
 name: ATPS
 dependencies:
-- openssl=1.0.2f=0
-- pip=8.0.2=py27_0
-- python=2.7.11=0
-- readline=6.2=2
-- setuptools=19.6.2=py27_0
-- sqlite=3.9.2=0
-- tk=8.5.18=0
-- wheel=0.29.0=py27_0
-- zlib=1.2.8=0
+- pip=22.3.1
+- python=3.10.6
+- bioconda mafft
+- bioconda clustalo
+- bioconda gblocks
+- bioconda phyml
+- bioconda phast
+- bioconda java-jdk
+- muscle
 - pip:
   - Bio==0.9.0
   - mne==0.23.4
